=== nautilus 2.3.90 ===

2003-09-02  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in: 2.3.90

2003-09-01  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c (nautilus_file_invalidate_attributes_internal):
	Don't invalidate attributes for NautilusDesktopIconFiles, since
	they are always up to date (being in-memory objects). This fixes the
	problem where the trash and/or home icons became unusable with the default
	icon.

2003-08-29  Alexander Larsson  <alexl@redhat.com>

	* components/tree/nautilus-tree-view.c (theme_changed_callback):
	Don't set theme if model is NULL.

2003-08-27  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory-async.c:
	* libnautilus-private/nautilus-directory-private.h:
	New function nautilus_set_kde_trash_name.
	Auto hide KDE trash dir in desktop dir
	
	* libnautilus-private/nautilus-directory.[ch]:
	New function nautilus_directory_is_desktop_directory()

	* libnautilus-private/nautilus-file-utilities.[ch]:
	* libnautilus-private/nautilus-file.c:
	Tweak the is_desktop_directory a bit so it works for
	both Files and Directories.

	* src/nautilus-application.c:
	On initialization, read the kde config to figure out the kde
	trash directory name.

=== nautilus 2.3.9 ===

2003-08-25  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in: 2.3.9

2003-08-22  Dave Camp  <dave@ximian.com>

	* components/tree/nautilus-tree-view.c:
	(show_selection_idle_callback), (schedule_show_selection),
	(row_loaded_callback), (create_tree), (load_location_callback),
	(nautilus_tree_view_dispose): Remove the show_selection idle
	handler if the view goes away, and chain up in the dispose
	handler.  Fixes #119150.

2003-08-20  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-icon-container.c:
	(set_keyboard_rubberband_start),
	(clear_keyboard_rubberband_start),
	(get_rubberband), (keyboard_move_to), (keyboard_home),