@@ -11,3 +11,4 @@ nautilus-metafile-server.h
 nautilus_metafile_server_idl_stamp
 nautilus-marshal-guts.c
 nautilus-marshal.h
+apps_nautilus_preferences.schemas
