@@ -1,3 +1,10 @@
+2003-09-02  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* libnautilus-private/.cvsignore: quiet CVS..
+
+	* libnautilus-private/nautilus-file.c: (get_real_name):
+	convert user real name to UTF-8 if needed (fix Mdk bug 4939)
+
 === nautilus 2.3.90 ===
 
 2003-09-02  Alexander Larsson  <alexl@redhat.com>
